@@ -1,5 +1,10 @@
 2007-12-15	Frank Richter	<frank.richter@gmail.com>
 
+* Sanitized focus handling; now only one widget has focus (and gets focus
+  notifications), not all widgets up in the widget tree.
+
+2007-12-15	Frank Richter	<frank.richter@gmail.com>
+
 * Changed the embedded browser object to not be a chrome wrapper any more.
   (I don't know what "chrome wrapper" exactly does, but it fixes some 
   rendering issues for some web sites. Also, "no chrome wrapper" fits better
